--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "frontEnd",
-    "slug": "frontEnd_TCC",
+    "name": "DrugDrug",
+    "slug": "DrugDrug",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/images/splash01p.png",
