--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.27.2",
     "expo": "~44.0.0",
+    "expo-device": "~4.1.0",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
