--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "expo-notifications": "~0.14.0",
     "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "^9.8.2",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
+    "react-native-alarm-feature": "^0.0.3",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
